force-app/main/default/objects/Company_Info__mdt/Company_Info__mdt.object-meta.xml
<CustomObject>
    <label>Company Info</label>
    <pluralLabel>Company Infos</pluralLabel>
</CustomObject>