force-app/main/default/objects/Company_Info__mdt/fields/License_No__c.field-meta.xml
<CustomField>
    <fullName>License_No__c</fullName>
    <label>License No</label>
    <type>TextArea</type>
</CustomField>