force-app/main/default/objects/Company_Info__mdt/fields/Reg_No__c.field-meta.xml
<CustomField>
    <fullName>Reg_No__c</fullName>
    <label>Reg No</label>
    <type>TextArea</type>
</CustomField>