force-app/main/default/objects/Company_Info__mdt/fields/Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Tax_ID__c</fullName>
    <label>Tax ID</label>
    <type>TextArea</type>
</CustomField>